--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "dev": "nodemon ./src/server.js"
+    "dev": "node-dev ./src/server.js",
+    "migrate": "knex migrate:latest"
   },
   "author": "Gabriel Leonardo A B Pereira",
   "license": "ISC",
   "description": "API desenvolvida no curso Explorer da Rocketseat",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "npm": "^9.4.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
+    "knex": "^2.4.2",
+    "nodemon": "^2.0.20",
+    "npm": "^9.4.2",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.4"
   }
 }
